# cpt_simulator_v5

./: .dockerignore  .gitignore  CORE_v3_FOUNDATION_MANIFEST.json  Dockerfile  HANDOVER.md  README.md  cli.py  conftest.py  cpt_v_2_6_next_steps.md  dpo_dataset_advanced.jsonl  dpo_dataset_general.jsonl  dpo_dataset_logic.jsonl  dpo_dataset_math.jsonl  dpo_dataset_moe_final.jsonl  dpo_dataset_physics.jsonl  e2e_diagnose.py  e2e_full.py  e2e_test.py  fix_curriculum.py  pyproject.toml  pytest.ini  pytest_output.txt  requirements.txt  seed_syllabus.py  snapshot.json  start_server.sh  stop_server.sh  sync_curriculum.py  task_v2.7.11.md
artifacts/: artifact_registry.json
backend/: config.py  i18n.py  main.py  notifier.py  requirements.txt
configs/: artifact_policy.yaml
core_runtime/: __init__.py
curriculum/: 00_logic_layer.json  01_math_layer.json  02_geometry_time_layer.json  03_physics_layer.json  04_complex_systems_layer.json  05_advanced_abstraction.json
datasets/: action_success_log.csv  algebra_success_log.csv  arithmetic_success_log.csv  counting_success_log.csv  function_success_log.csv  geometry_success_log.csv  logic_success_log.csv  newton_success_log.csv  numeric_success_log.csv  proportion_success_log.csv  trig_success_log.csv  vector_success_log.csv
docs/: AGENT_HANDOVER_V29E.md  AGENT_HANDOVER_V29F_COMPREHENSIVE.md  ARCHITECTURE.md  ARCHITECTURE_V26.md  ARTIFACT_OPERATIONS_RUNBOOK.md  CHANGELOG_HERMES.md  CLICK_ONDA.md  CONTEXTO.md  CORE_ARCHITECTURE.md  CORE_DOMAIN_MODEL.md  CORE_PRINCIPLES.md  CORE_RELEASE_README.md  CORE_RUNTIME_GUARANTEES.md  CORE_TRANSITION_PLAN.md  CPT_BENCH.md  ESTADO_CURRICULO.md  GUIA_AGENTE_SYLLABUS.md  HANDOFF_V26.md  HANDOVER_COMPLETO.md  MIGRATION_LOG.md  MONITOR_HERMES.md  OPERATIONAL_EXPERIENCE_DASHBOARD_SPEC.md  ORACLE_SDK_GUIDE.md  PACKAGING_AND_INSTALL.md  PAPER_POSITIONING.md  ROADMAP.md  ROADMAP_CHRONICLE.md  THIRD_DOMAIN_PLAN.md  TODO_V26.md  TRACE_SCHEMA.md  TUTORIAL_LINEAR_SYSTEM.md  V210_PROJECTION_DISTILLED_SURROGATE.md  V211_CORE_STANDARDIZATION_FREEZE.md  V212_EXECUTION_RUNTIME.md  V213_RUNTIME_RESILIENCE.md  V214_RETRIEVAL_MEMORY_RUNTIME.md  V215_ADAPTIVE_RUNTIME_SCHEDULING.md  V215_STABILITY_GUARANTEES.md  V26_PROGRESS_LOG.md  V27_DISTILLATION_READINESS.md  (+6 more)
examples/: 01_linear_system_walkthrough.py  oracle_template.py
frontend/: index.html  package-lock.json  package.json
models/: action_tabular_filter.pt  algebra_tabular_filter.pt  arithmetic_tabular_filter.pt  function_tabular_filter.pt  geometry_tabular_filter.pt  logic_tabular_filter.pt  newton_tabular_filter.pt  numeric_tabular_filter.pt  proportion_tabular_filter.pt  trig_tabular_filter.pt  vector_tabular_filter.pt
planner/: __init__.py  algebra_automation.py  arithmetic_automation.py  counting_automation.py  function_automation.py  geometry_automation.py  logic_automation.py  newton_automation.py  numeric_automation.py  planner.py  planner_automation.py  proportion_automation.py  tabular_filter.py  trig_automation.py  vector_automation.py
sandbox/: Dockerfile
scratch/: add_invariants.py  assign_invariants.py  compare_checkpoints.py  fix_factories.py  fix_factories_v2.py  reset_modules.py  run_a.metrics.json  run_a.pt  run_b.metrics.json  run_b.pt  test_energy.py  test_intent.py  (+7 more)
(+459 files in other folders)
